# UIKit-cross-platform

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  FEATURE_AVAILABILITY.md  FEATURE_COVERAGE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  Package.swift  README.md  UIKitConfig.cmake  build.gradle  circle.yml  cli  codecov.yml  create-android-project  createAndroidProject
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
Android/uikit/: UIKitActivity.kt  VideoJNI.kt
Shaders/: CommonShaders.swift  MaskingShaders.swift  Shader.swift  ShaderProgram+mask.swift  ShaderProgram.swift
Sources/: AVAudioPlayer+Android.swift  AVAudioPlayer+Mac.swift  AVPlayer+Android.swift  AVPlayerItem+Android.swift  AVPlayerItem+Mac.swift  AVPlayerLayer+Android.swift  AVPlayerLayer+Mac.swift  AVURLAsset+Android.swift  AffineTransform.swift  AndroidContext.swift  AnimatableProperty.swift  AnimationKeyPath.swift  AnimationLoopState.swift  AnimationPrototype.swift  AnimationPrototypes.swift  Animations.swift  Array+CGPoint.swift  Bundle.swift  Button.swift  CAAction.swift  CABasicAnimation+updateProgress.swift  CABasicAnimation.swift  CABasicAnimationDelegate.swift  CABasicAnimationPrototype.swift  CAGradientLayer.swift  CALayer+ContentsGravity.swift  CALayer+SDL.swift  CALayer+animations.swift  CALayer+copy.swift  CALayer+createNonAnimatingCopy.swift  CALayer.swift  CAMediaTimingFunction.swift  CASpringAnimation.swift  CASpringAnimationPrototype.swift  CATransaction.swift  CATransform3D+SDL_gpu.swift  CATransform3D+animations.swift  CATransform3D+interpolate.swift  CATransform3D.swift  CGAffineTransform+animations.swift  (+139 more)
UIKit/: AnimationPrototype.swift  Animations.swift  CABasicAnimation+updateProgress.swift  CABasicAnimation.swift  CASpringAnimation.swift  CGAffineTransform.swift  Info.plist  NSMutableAttributedString.swift  UIControl.swift  UIFont.swift  UIKit.h  UILabel.swift  UIView+animate.swift  UIViewController.swift  VideoTexture+Mac.swift  macOS.modulemap
UIKit-Android/: .gitignore  build.gradle  settings.gradle
UIKit-Android/gradle/wrapper/: gradle-wrapper.properties
UIKit-Android/uikit/: .gitignore  build.gradle
UIKit-Android/uikit/src/main/: AndroidManifest.xml
UIKit.xcodeproj/: project.pbxproj
UIKit.xcodeproj/project.xcworkspace/xcshareddata/: UIKit.xcscmblueprint
UIKit.xcodeproj/xcshareddata/xcbaselines/5C27E7B61ECB2F6500F5020D.xcbaseline/: 9F0571E1-9E25-4006-883D-D0591EA7F737.plist  BD88339C-EE99-4B1A-BE69-4B3D1BDDD137.plist  Info.plist
UIKit.xcodeproj/xcshareddata/xcschemes/: UIKit iOSTestTarget.xcscheme  UIKit.xcscheme  iOSTestTarget.xcscheme
UIKit.xcodeproj/xcuserdata/geordiejay.xcuserdatad/xcschemes/: UIKit.xcscheme  xcschememanagement.plist
UIKit/CGImage/: CGImage.swift
UIKit/Geometry/: CGFloat.swift  CGPoint.swift
UIKitTest/: UITestCase.swift  UIViewTestSupport.swift  XCUIApplication.swift
UIKitTests/: AnimationTests.swift  ButtonContentAlignmentTests.swift  ButtonGeneralTestsAndSetup.swift  ButtonSizeToFitTests.swift  ButtonTests.swift  CALayerTests.swift  CGRect+TransformTests.swift  CGRectTests.swift  DisplayLinkTests.swift  Imports.swift  Info.plist  TestSetup.swift  Texture+Size.swift  TransformTests.swift  UIApplication+NSNotificationTests.swift  UIFontTests.swift  UIImage+testImage.swift  UIKitTests.swift  UIProgressViewTests.swift  UIScrollViewTests.swift  UIViewControllerTests.swift  UIViewTests.swift  loadCustomFont.swift
UIKitTests/Animations/: CABasicAnimationTests.swift  CAMediaTimingFunctionTests.swift  CASpringAnimationTests.swift  UIViewAnimationTests.swift
UIKitTests/Button/: Button.swift  ButtonContentAlignmentTests.swift  ButtonLayoutingTests.swift  ButtonSetTitleColorForStateTests.swift  ButtonSetTitleForStateTests.swift  ButtonSetTitleTests.swift  ButtonSizeToFitTests.swift  ButtonTestsConstants.swift
UIKitTests/Gestures/: TouchHandlingTests.swift  UIGestureRecognizerTests.swift  UIPanGestureRecognizerTests+draggableViews.swift  UIPanGestureRecognizerTests.swift  UIResponderChainTests.swift  UITouchTests.swift
UIKitTests/UIView/: UIViewTests+convert.swift  UIViewTests+didMoveToSuperView.swift  UIViewTests+hitTest.swift  UIViewTests+lifecycle.swift  UIViewTests+misc.swift  UIViewTests+subviews.swift  UIViewTests.swift
UIKitTests/URLSession+URLCache/: CacheStoreTests.swift  URLDiskCacheTests.swift
UIKit_C_API/include/: uikit.h
demo/: .gitignore
demo/DemoApp/: ViewController.swift  androidMain.swift
demo/DemoApp.xcodeproj/: project.pbxproj
demo/android/: build.gradle  settings.gradle
demo/android/app/: .gitignore  CMakeLists.txt  build.gradle
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/java/com/example/: MainActivity.kt
demo/android/app/src/main/java/com/flowkey/: MainActivity.kt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FAQs.md  FEATURE_COVERAGE.md  PREPARE_IOS_PROJECT.md  TESTING.md
iOS Polyfills/: About Polyfills.md  Button+iOS.swift  UIGestureRecognizer+Closures.swift
iOSTestTarget/: Info.plist
iPhoneUIKitTests/: iPhoneUIKitTests.swift
samples/: .gitignore
samples/getting-started/: CMakeLists.txt  Package.swift  cmake_caches.cmake  go.sh
samples/getting-started/DemoApp/: AppDelegate.swift  Info.plist  ViewController.swift  androidMain.swift  main.swift
samples/getting-started/DemoApp.xcodeproj/: project.pbxproj
samples/getting-started/DemoAppMac/: Info.plist
samples/getting-started/android/: build.gradle  gradle.properties  settings.gradle
samples/getting-started/android/app/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
samples/getting-started/android/app/src/main/: AndroidManifest.xml
samples/getting-started/android/app/src/main/java/com/example/: MainActivity.kt
samples/getting-started/android/gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml  assets
src/main/java/com.flowkey.uikit/: UIKitActivity.kt  UIKitView.kt  UserDefaults.kt
src/main/java/org/uikit/: AVAudioPlayer.kt  VideoJNI.kt
src/main/res/values/: strings.xml
(+13 files in other folders)
